<resources>
    <string name="app_name">FianlExam</string>
    <string name="game_start">게임 시작</string>
    <string name="dictionary">백과사전</string>
    <string name="statistics">통계</string>
    <string name="setting">설정</string>

    <string name="selectCharacter">캐릭터를 선택하십시오</string>

    <string name="back">뒤로</string>

    <string-array name="graphics_quality_options">
        <item>낮음</item>
        <item>보통</item>
        <item>높음</item>
    </string-array>

    <string-array name="language_options">
        <item>한국어</item>
        <item>영어</item>
        <item>일본어</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>